--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
     "uid": "^2.0.2"
   },
