--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "author": "<sir.volkov@outlook.com>",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "uid": "^2.0.2"
   },
